Excercise 1: Extend columns of blogs admin view

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -3783,6 +3783,7 @@ now=Now
 ntlm=NTLM
 ntlm-enabled=NTLM Enabled
 num-of-categories=# of Categories
+num-of-comments=# of Comments
 num-of-documents=# of Documents
 num-of-downloads=# of Downloads
 num-of-entries=# of Entries
