--- a/sql/indexes.properties
+++ b/sql/indexes.properties
@@ -76,6 +76,8 @@ IX_50702693=AssetTagStats.ClassNameId
 IX_56682CC4=AssetTagStats.T_C
 IX_9464CA=AssetTagStats.TagId
 
+IX_A1BD87A5=AssetViewStats.C_C
+
 IX_B22D908C=AssetVocabulary.CompanyId
 IX_C0AAD74D=AssetVocabulary.G_LikeN
 IX_C0AAD74D=AssetVocabulary.G_N
